@@ -909,6 +909,9 @@ Release 2.8.0 - UNRELEASED
     HDFS-8996. Consolidate validateLog and scanLog in FJM#EditLogFile (Zhe
     Zhang via Colin P. McCabe)
 
+    HDFS-9010. Replace NameNode.DEFAULT_PORT with HdfsClientConfigKeys.
+    DFS_NAMENODE_RPC_PORT_DEFAULT config key. (Mingliang Liu via wheat9)
+
   OPTIMIZATIONS
 
     HDFS-8026. Trace FSOutputSummer#writeChecksumChunks rather than
